--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <form id="pensamento-form">
           <input type="hidden" id="pensamento-id" />
           <label for="pensamento-conteudo">Pensamento</label>
-          <textarea 
-            id="pensamento-conteudo" 
-            placeholder="Digite seu pensamento" 
+          <textarea
+            id="pensamento-conteudo"
+            placeholder="Digite seu pensamento"
             required>
           </textarea>
-          <label 
+          <label
             for="pensamento-autoria">
               Autoria ou Fonte
             </label>
@@ -64,7 +64,9 @@
       <span></span>
       <section id="lista-pensamentos-container">
         <h3>Meu Mural</h3>
-        <ul id="lista-pensamentos"></ul>
+        <ul id="lista-pensamentos">
+
+        </ul>
       </section>
     </main>
 
@@ -73,5 +75,8 @@
         2024 Desenvolvido por Alura. 
         Projeto fictício sem fins comerciais.</p>
     </footer>
+    <script type="module" src="js/api.js"></script>
+    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/ui.js"></script>
   </body>
 </html>
