--- a/index.html
+++ b/index.html
@@ -33,15 +33,9 @@
         <form id="pensamento-form">
           <input type="hidden" id="pensamento-id" />
           <label for="pensamento-conteudo">Pensamento</label>
-          <textarea
-            id="pensamento-conteudo"
-            placeholder="Digite seu pensamento"
-            required>
+          <textarea id="pensamento-conteudo" placeholder="Digite seu pensamento" required>
           </textarea>
-          <label
-            for="pensamento-autoria">
-              Autoria ou Fonte
-            </label>
+          <label for="pensamento-autoria">Autoria ou Fonte</label>
           <input 
             type="text" 
             id="pensamento-autoria" 
