--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button 
               type="submit" 
               id="botao-salvar">
-              Adicionar
+              Salvar
             </button>
             <button 
               type="button" 
